# ECS

./: README.md
software/STM32/DemoProjekten/STM32F051DiscoveryHelloWorld/: CMakeLists.txt  main.cpp
software/STM32/DemoProjekten/STM32F051DiscoveryHelloWorld/config/: stm32f0xx_hal_conf.h
software/STM32/DemoProjekten/STM32F051DiscoveryHelloWorld/config/STM32F0308KuubConfig/: .mxproject  STM32F0308KuubConfig.ioc
software/STM32/DemoProjekten/STM32F051DiscoveryHelloWorld/h/: main.h
software/STM32/DemoProjekten/STM32F412DiscoveryHelloWorld/: CMakeLists.txt  controller.cpp  main.cpp
software/STM32/DemoProjekten/STM32F412DiscoveryHelloWorld/h/: controller.h  main.h  stm32f4xx_hal_conf.h
software/STM32/DemoProjekten/STM32L432Nucleo32HelloWorld/: CMakeLists.txt  main.cpp
software/STM32/DemoProjekten/STM32L432Nucleo32HelloWorld/config/: stm32l4xx_hal_conf.h
software/STM32/DemoProjekten/STM32L432Nucleo32HelloWorld/config/STM32L432KuubConfig/: .mxproject  STM32L432KuubConfig.ioc
software/STM32/DemoProjekten/STM32L432Nucleo32HelloWorld/h/: main.h
software/STM32/Practicum_STM32F412DiscoveryBoard/: CMakeLists.txt
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/: CMakeCache.txt  Makefile  RGTpracticum.cbp  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/AlgemeenDir/: Makefile  algdef.cpp.lst  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/BasisDir/: CortexMProcessor.cpp.lst  Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/Components/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/ESE_BSPProcessor/: ESEBoardComponents.cpp.lst  ESEBoardController.cpp.lst  Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/ESE_DigProcesAansturing/: DigProcesAansturing.cpp.lst  Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/ESE_FreeRTOS/: Makefile  cmake_install.cmake  stdTaak.cpp.lst
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/F412GDiscoveryLib/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/FatFS/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/FreeRTOS/: Makefile  cmake_install.cmake  cmsis_os.c.lst  croutine.c.lst  event_groups.c.lst  heap_4.c.lst  list.c.lst  port.cpp.lst  queue.c.lst  tasks.c.lst  timers.c.lst
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/FreeRTOSOOSchil/: Makefile  cmake_install.cmake  cmutex.cpp.lst  cqueue.cpp.lst  cread_write_lock.cpp.lst  csemaphore.cpp.lst  ctasklet.cpp.lst  cthread.cpp.lst  ctickhook.cpp.lst  ctimer.cpp.lst  cworkqueue.cpp.lst
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/RGTData/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/STM32CMSIS/: Makefile  cmake_install.cmake  startup_stm32f412zx.s.lst  system_stm32f4xx.c.lst
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/STM32_HAL_Driver/: Makefile  Makefile.tmpba8ce  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/STemWin/: GUI_X_OS.c.lst  Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/SeggerRTT/: Makefile  SEGGER_RTT.c.lst  SEGGER_RTT_Syscalls_GCC.c.lst  SEGGER_RTT_Syscalls_IAR.c.lst  SEGGER_RTT_Syscalls_KEIL.c.lst  SEGGER_RTT_Syscalls_SES.c.lst  SEGGER_RTT_printf.c.lst  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/SeggerSysview/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/Utilities/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/gegenereerd/: ozoneConfig.jdebug
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/rtosBasisRGT/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/Debug/toepassing/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/SizeRelease/: CMakeCache.txt  Makefile  RGTpracticum.cbp  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/SizeRelease/AlgemeenDir/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/CLion/SizeRelease/BasisDir/: Makefile  cmake_install.cmake
software/STM32/Practicum_STM32F412DiscoveryBoard/Executable/Debug/: RGTpracticum.elf  RGTpracticum.map
software/STM32/Practicum_STM32F412DiscoveryBoard/config/: FreeRTOSConfig.h  GUIConf.h  lcd_log_conf.h  stm32f4xx_hal_conf.h
software/STM32/Practicum_STM32F412DiscoveryBoard/rtosBasisRGT/: CMakeLists.txt  rtosTaak.cpp
software/STM32/Practicum_STM32F412DiscoveryBoard/rtosBasisRGT/h/: rtosTaak.h
software/STM32/Practicum_STM32F412DiscoveryBoard/toepassing/: CMakeLists.txt  main.cpp
software/STM32/Practicum_STM32F412DiscoveryBoard/toepassing/h/: main.h
software/STM32/Practicum_STM32L432NucleoBoard/: CMakeLists.txt
software/STM32/Practicum_STM32L432NucleoBoard/config/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h
software/STM32/Practicum_STM32L432NucleoBoard/rtosBasisRGT/: rtosTaak.cpp
software/STM32/Practicum_STM32L432NucleoBoard/rtosBasisRGT/h/: rtosTaak.h
software/STM32/Practicum_STM32L432NucleoBoard/toepassing/: CMakeLists.txt  main.cpp
software/STM32/Practicum_STM32L432NucleoBoard/toepassing/h/: main.h
software/STM32/STM32Basis/Segger/Segger_Sysview/: CMakeLists.txt
software/STM32/STUDENT/: CMakeLists.txt  InputResponsieSessie.cpp  PIDControllerSessie.cpp  aanUitControllerSessie.cpp  debugSessie.cpp  fuzzyControllerSessie.cpp
software/STM32/STUDENT/h/: InputResponsieSessie.h  PIDControllerSessie.h  aanUitControllerSessie.h  debugSessie.h  debugTaak.h  fuzzyControllerSessie.h
software/STM32/STUDENT/support/: RGTBoard.cpp  RGTTaak.cpp  debugTaak.cpp
software/STM32/STUDENT/support/h/: RGTBoard.h  RGTTaak.h
software/rgtData/: CMakeLists.txt  RGTData.cpp
software/rgtData/h/: RGTData.h
(+134 files in other folders)
